<resources>
    <string name="app_name" translatable="false">Johannis und Georgs Kirchengemeinde Uelzen</string>
    <string name="title_web">Dashboard</string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="title_media">Media</string>
    <string name="title_licenses">Licenses</string>
    <string name="title_terms">Terms and Conditions</string>
    <string name="title_settings">Settings</string>
    <string name="title_privacy">Privacy</string>
    <string name="html_terms">"file:///android_asset/terms_en.html"</string>
    <string name="html_privacy">"file:///android_asset/privacy_en.html"</string>
    <string name="custom_license_title">Open source licenses</string>
    <string name="category_general">General</string>
    <string name="theme_header">Theme</string>
    <string name="pushnotifications_header">Push Notifications</string>
    <string name="dailymotto_pushnotifications_header">Daily Motto</string>
    <string name="newsfeed_pushnotifications_header">News</string>
    <string name="url_stjohannis_uelzen" translatable="false">https://johannis-und-georg.wir-e.de/</string>
    <string name="key_theme" translatable="false">theme</string>
    <string name="key_dailymotto_pushnotifications" translatable="false">dailymotto_pushnotifications</string>
    <string name="key_newsfeed_pushnotifications" translatable="false">newsfeed_pushnotifications</string>
    <string name="information_intro">Developed by</string>
    <string name="information_outro">for and on behalf of\nparish St. Johannis and Georgs church community Uelzen</string>
    <string name="youtube_channel" translatable="false">UC1M10W3W1vJ5KNxXensEM1w</string>
    <string name="current">Current</string>
    <string name="solution">Solution</string>
    <string name="thoughts">Impulses</string>
    <string name="sermon">Sermon</string>
    <string name="groups">Groups</string>
    <string name="happy_hour">Happy Hour</string>
    <string name="gallery">Gallery</string>
    <string name="mission">Mission</string>
    <string name="history">History</string>
    <string name="confirmands">Confirmands</string>
    <string name="environment">Environment</string>
    <string name="foundation">Foundation</string>
    <string name="volunteering">Volunteering</string>
    <string name="board">Board</string>
    <string name="donations">Donations</string>
    <string name="newsletter">Newsletter</string>
    <string name="churchservices">Church services</string>
    <string name="churchinlife">Church in Life</string>
    <string name="url_solution" translatable="false">https://johannis-und-georg.wir-e.de/tageslosung</string>
    <string name="url_thoughts" translatable="false">https://johannis-und-georg.wir-e.de/gedanken-fuer-den-tag</string>
    <string name="url_meditations" translatable="false">https://johannis-und-georg.wir-e.de/kreuzwegmeditationen-in-zeiten-von-corona-2021</string>
    <string name="url_sermon" translatable="false">https://johannis-und-georg.wir-e.de/predigten</string>
    <string name="url_review" translatable="false">https://johannis-und-georg.wir-e.de/rueckblick-auf-das-coronajahr-ein-stueck-gemeindechronik</string>
    <string name="url_groups" translatable="false">https://johannis-und-georg.wir-e.de/gemeinde</string>
    <string name="url_happy_hour" translatable="false">https://johannis-und-georg.wir-e.de/happy-hour</string>
    <string name="url_gallery" translatable="false">https://johannis-und-georg.wir-e.de/bilder-und-filmgalerie</string>
    <string name="url_mission" translatable="false">https://johannis-und-georg.wir-e.de/leitbild</string>
    <string name="url_history" translatable="false">https://johannis-und-georg.wir-e.de/geschichte-der-gemeinde-20f82b32-c851-4719-80b8-5921dcc75dac</string>
    <string name="url_hygiene" translatable="false">https://johannis-und-georg.wir-e.de/hygienekonzept-fuer-das-gemeindezentrum-st-johannis</string>
    <string name="url_confirmands" translatable="false">https://johannis-und-georg.wir-e.de/konfirmandenarbeit</string>
    <string name="url_children" translatable="false">https://johannis-und-georg.wir-e.de/die-johannisbeeren</string>
    <string name="url_environment" translatable="false">https://johannis-und-georg.wir-e.de/gruener-hahn</string>
    <string name="url_foundation" translatable="false">https://johannis-und-georg.wir-e.de/gemeindestiftung-glauben-miteinder-leben</string>
    <string name="url_volunteering" translatable="false">https://johannis-und-georg.wir-e.de/ehrenamtliche-mitarbeit</string>
    <string name="url_board" translatable="false">https://johannis-und-georg.wir-e.de/kirchenvorstand</string>
    <string name="url_donations" translatable="false">https://johannis-und-georg.wir-e.de/spendenkonto-st-johannis</string>
    <string name="url_newsletter" translatable="false">https://johannis-und-georg.wir-e.de/rundbrief</string>
    <string name="url_churchservices" translatable="false">https://gottesdienste.kirche-uelzen.de/Uelzen%20Johannis-und-Georgs-Kirchengemeinde/embed/</string>
    <string name="url_churchinlife" translatable="false">https://johannis-und-georg.wir-e.de/kirche-im-leben</string>
    <string name="information_projecturl">Project URL:</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="app_widget_description">Daily Motto</string>
    <string name="appwidget_previewquote" translatable="false">Ihr sollt nicht stehlen noch lügen noch betrügerisch handeln einer mit dem andern.</string>
    <string name="appwidget_previewquoteverse" translatable="false">3. Mose 19,11</string>
    <string name="appwidget_previewinspiration" translatable="false">Seid allesamt gleich gesinnt, mitleidig, brüderlich, barmherzig, demütig. Vergeltet nicht Böses mit Bösem oder Scheltwort mit Scheltwort, sondern segnet vielmehr, weil ihr dazu berufen seid, auf dass ihr Segen erbt.</string>
    <string name="appwidget_previewinspirationverse" translatable="false">1. Petrus 3,8-9</string>
    <string name="title_map">Way of George</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="speed">(m/s)</string>
    <string name="bearing">Bearing</string>
    <string name="marker_info_title">Georg\'s church with Kirchweyhe</string>
    <string name="html_youtube" translatable="false">file:///android_asset/youtube_player.html</string>
    <string name="mr_softwaretechnik_logo" translatable="false">MARCUS RUNGE Logo</string>
    <string name="video_thumbnail" translatable="false">Video-Thumbnail</string>
    <string name="softwaretechnik">MARCUS RUNGE</string>
    <string name="mr_software_outlook_de">mr.software@outlook.de</string>
    <string name="kg_johannis_uelzen_evlka_de">kg.johannis.uelzen@evlka.de</string>
    <string name="https_github_com_marcusrunge_stjohannisuelzen">https://github.com/marcusrunge/StJohannisUelzen</string>
    <string name="open_pdf">Open PDF</string>
</resources>