<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/category_general">
        <ListPreference
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            android:key="@string/key_theme"
            android:title="@string/theme_header"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            android:key="@string/key_pushnotifications"
            android:summaryOff="@string/off"
            android:summaryOn="@string/on"
            android:title="@string/pushnotifications_header" />
    </PreferenceCategory>
    <PreferenceCategory app:title="Information">
        <Preference android:layout="@layout/preference_information" />
    </PreferenceCategory>
</PreferenceScreen>