<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.map.MapsFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.marcusrunge.stjohannisuelzen.ui.map.MapsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="?attr/actionBarSize">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:onMapReadyCallback="@{viewmodel}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/table"/>
        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*"
            app:layout_constraintTop_toBottomOf="@id/map"
            app:layout_constraintBottom_toBottomOf="parent">
            <TableRow>
                <TextView
                    android:text="@string/longitude"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/latitude"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/bearing"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@string/speed"
                    android:gravity="center"
                    android:padding="3dip" />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@{viewmodel.longitude}"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@{viewmodel.latitude}"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@{viewmodel.bearing}"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="3dip" />
                <TextView
                    android:text="@{viewmodel.speed}"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:padding="3dip" />
            </TableRow>

        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>